<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.johndoyle.beerme.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="160dp"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true" >

        <TableLayout
            android:id="@+id/orderTable"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical"
            android:stretchColumns="0,1,2,3" >
        </TableLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/beerMenuButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/scrollView1"
        android:layout_marginRight="18dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/beer_icon"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_beer" />

    <ImageButton
        android:id="@+id/wineMenuButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/beerMenuButton"
        android:layout_marginRight="18dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/wine_icon"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_wine" />

    <ImageButton
        android:id="@+id/shotMenuButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/wineMenuButton"
        android:layout_marginRight="18dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/shot_icon"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_shot" />

    <ImageButton
        android:id="@+id/cocktailMenuButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/shotMenuButton"
        android:layout_marginRight="18dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/cocktail_icon"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_cocktail" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/submitButton"
        android:layout_below="@+id/submitButton"
        android:text="@string/cancel_order" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:layout_marginTop="16dp"
        android:text="@string/submit_order" />

</RelativeLayout>